--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+	<title>Instagram</title>
+	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  Instagram
+	<div class="title">
+		<h1><img src="images/brand" alt="Instagram"></h1>
 
-  Capture and Share the World's Moments
+	</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+	Capture and Share the World's Moments
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+	Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+	Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+	Oh yeah, did we mention it's free?
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+	Download on the App Store
+	Get it on Google Play
 
-  &copy; 2014 Instagram
+	About Us
+	Support
+	Blog
+	Press
+	API
+	Jobs
+	Privacy
+	Terms
+
+	&copy; 2014 Instagram
 </body>
 </html>
