--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,18 +5,42 @@
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
+
 	<div class="title">
-		<h1><img src="images/brand" alt="Instagram"></h1>
+		<h1><img src="images/brand.png" alt="Instagram"></h1>
+		<div class="login">
+			<img src="images/home.png" alt="Login">
+			<p>Login</p>
+		</div>
+	</div>
+
+	<div class="main">
+		<h2>Capture and Share the World's Moments</h2>
+		<p>
+			Instagram is a fast, beautiful and fun way to share your life with friends and family.
+		</p>
+		<p>
+			Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+		</p>
+		<p>
+			Oh yeah, did we mention it's free?
+		</p>
+
+		<div class="download-links">
+			<div class="apple">
+				<img src="images/badge-iphone.png" alt="App Store" />
+			</div>
+			<div class="android">
+				<img src="images/badge-android.png" alt="Google Play" />
+			</div>
+		</div>
 
 	</div>
 
-	Capture and Share the World's Moments
 
-	Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-	Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-	Oh yeah, did we mention it's free?
+
 
 	Download on the App Store
 	Get it on Google Play
