--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,32 +28,31 @@
 
 		<div class="download-links">
 			<div class="apple">
-				<img src="images/badge-iphone.png" alt="App Store" />
+				<img src="images/badge-iphone.png" alt="App Store">
 			</div>
 			<div class="android">
-				<img src="images/badge-android.png" alt="Google Play" />
+				<img src="images/badge-android.png" alt="Google Play">
 			</div>
 		</div>
 
+		<div class="phone=picture">
+			<img src="images/phones.png" alt="Phone picture">
+		</div>
+
 	</div>
+	<footer>
+		<ul>
+			<li>About Us</li>
+			<li>Support</li>
+			<li>Blog</li>
+			<li>Press</li>
+			<li>API</li>
+			<li>Jobs</li>
+			<li>Privacy</li>
+			<li>Terms</li>
+			<li>&copy; 2014 Instagram</li>
+		</ul>
+	</footer>
 
-
-
-
-
-
-	Download on the App Store
-	Get it on Google Play
-
-	About Us
-	Support
-	Blog
-	Press
-	API
-	Jobs
-	Privacy
-	Terms
-
-	&copy; 2014 Instagram
 </body>
 </html>
