--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,44 +2,45 @@
 <html lang="en">
 <head>
 	<title>Instagram</title>
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+<div class="content">
 	<div class="title">
 		<h1><img src="images/brand.png" alt="Instagram"></h1>
 		<div class="login">
-			<img src="images/home.png" alt="Login">
-			<p>Login</p>
+			<img class="login-logo" src="images/home.png" alt="Login">
+			<p class="login-logo">Log in</p>
+		</div>
+	</div>
+	<div class="body">
+		<div class="main">
+			<h2>Capture and Share the World's Moments</h2>
+			<p>
+				Instagram is a fast, beautiful and fun way to share your life with friends and family.
+			</p>
+			<p>
+				Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+			</p>
+			<p>
+				Oh yeah, did we mention it's free?
+			</p>
+
+			<div class="download-links">
+				<div class="apple">
+					<img src="images/badge-iphone.png" alt="App Store">
+				</div>
+				<div class="android">
+					<img src="images/badge-android.png" alt="Google Play">
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<div class="main">
-		<h2>Capture and Share the World's Moments</h2>
-		<p>
-			Instagram is a fast, beautiful and fun way to share your life with friends and family.
-		</p>
-		<p>
-			Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-		</p>
-		<p>
-			Oh yeah, did we mention it's free?
-		</p>
-
-		<div class="download-links">
-			<div class="apple">
-				<img src="images/badge-iphone.png" alt="App Store">
-			</div>
-			<div class="android">
-				<img src="images/badge-android.png" alt="Google Play">
-			</div>
-		</div>
-
-		<div class="phone=picture">
+		<div class="phone-picture">
 			<img src="images/phones.png" alt="Phone picture">
 		</div>
-
-	</div>
+</div>
 	<footer>
 		<ul>
 			<li>About Us</li>
