--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="content">
+
 	<div class="title">
 		<h1><img src="images/brand.png" alt="Instagram"></h1>
 		<div class="login">
@@ -15,9 +16,9 @@
 	</div>
 	<div class="body">
 		<div class="main">
-			<h2>Capture and Share the World's Moments</h2>
+			<h2>Capture and Share<br> the World's Moments</h2>
 			<p>
-				Instagram is a fast, beautiful and fun way to share your life with friends and family.
+				Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 			</p>
 			<p>
 				Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -36,11 +37,11 @@
 			</div>
 		</div>
 	</div>
+</div>
 
 		<div class="phone-picture">
 			<img src="images/phones.png" alt="Phone picture">
 		</div>
-</div>
 	<footer>
 		<ul>
 			<li>About Us</li>
@@ -51,7 +52,7 @@
 			<li>Jobs</li>
 			<li>Privacy</li>
 			<li>Terms</li>
-			<li>&copy; 2014 Instagram</li>
+			<li class="copyright">&copy; 2014 Instagram</li>
 		</ul>
 	</footer>
 
